refs #351 - fixing scrollbar issue on form errors

--- a/sites/all/modules/entityreference_browser/entityreference_browser.css
+++ b/sites/all/modules/entityreference_browser/entityreference_browser.css
@@ -9,6 +9,7 @@
 
 .entityreference-browser-wrapper {
   height: 350px;
+  overflow: auto;
 }
 
 .entityreference-browser-widget-left {
@@ -42,7 +43,6 @@
 
 .entityreference-browser-view-widget {
   width: 100%;
-  border-left: 10px solid #edefeb;
 }
 
 .entityreference-browser-view-widget .view {
